--- a/calculator.html
+++ b/calculator.html
@@ -27,7 +27,7 @@
         <div class="col-sm">
           <form action="javascript:void{0}" method="post" autocomplete="off">
             <div class="row mb-3">
-              <label for="inputTableSize" class="col-sm-3 col-form-label">Table Size:</label>
+              <label class="col-sm-3 col-form-label">Table Size:</label>
               <div class="col-sm-9">
                 <input type="number" class="form-control" id="inputTableSize" min="1" max="53" placeholder="7" />
               </div>
@@ -59,7 +59,7 @@
             </div>
 
             <div class="row mb-3">
-              <label for="inputHashFunction" class="col-sm-3 col-form-label">Hash Function:</label>
+              <label class="col-sm-3 col-form-label">Hash Function:</label>
               <div class="col-sm-9 my-auto">
                 <input type="text" class="form-control" id="inputHashFunction" placeholder="(key ^ 2) % tableSize" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Tooltip on bottom" />
               </div>
@@ -98,21 +98,21 @@
             </fieldset>
 
             <div class="input-group mb-3">
-              <label for="inputLinearProbeMult" class="col-sm-5 col-form-label">
+              <label class="col-sm-5 col-form-label">
                 Linear Probe Multiplier:
               </label>
               <div class="col-sm-7 my-auto">
                 <input type="number" class="form-control" id="inputLinearProbeMult" placeholder="1" min="1" />
               </div>
 
-              <label for="inputQuadProbeMult" class="col-sm-5 col-form-label">
+              <label class="col-sm-5 col-form-label">
                 Quadratic Probe Multiplier:
               </label>
               <div class="col-sm-7 my-auto">
                 <input type="number" class="form-control" id="inputQuadProbeMult" placeholder="1" min="1" />
               </div>
 
-              <label for="inputDoubleHash" class="col-sm-5 col-form-label">Double Hash Function:</label>
+              <label class="col-sm-5 col-form-label">Double Hash Function:</label>
               <div class="col-sm-7 my-auto">
                 <input type="text" class="form-control" id="inputDoubleHash" placeholder="(5 - key) % tableSize" />
               </div>
