Bug fixes, added delete key functionality

--- a/calculator.html
+++ b/calculator.html
@@ -12,7 +12,8 @@
   <link rel="stylesheet" href="bootstrap-5.0.1-dist/css/bootstrap.min.css" />
   <script src="bootstrap-5.0.1-dist/js/bootstrap.bundle.js"></script>
 
-  <script defer src="script.js" type="module" charset="utf-8"></script>
+  <script src="hashTable.js" type="module" charset="utf-8"></script>
+  <script src="script.js" type="module" charset="utf-8"></script>
 </head>
 
 <body>
